--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -56,9 +56,9 @@
   box-sizing: border-box;
   margin: 0;
   font-weight: normal;
-}
+}*/ 
 
-body {
+/* body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
@@ -70,4 +70,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */ 
+}  */
+
